@@ -1,4 +1,5 @@
 INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../files -I$(srcdir)/../objs \
+	-I$(srcdir)/../imagewin -I$(srcdir)/../shapes \
 	$(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_FLAGS) $(CPPFLAGS)
 
 noinst_LTLIBRARIES = libserver.la
